# ElGamalOT1n

./: .gitignore  Cargo.toml  README.md
miscellaneous/: protocol Diagram.drawio
src/: elgamal_ot.rs  lib.rs  main.rs
src/elgamal_ot/: ec_handler.rs
src/keyfile/: readme.md
