[package]
name = "el_gam_ot1n"
version = "0.1.0"
authors = ["VicXekro <v.k.youdom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"

[[bin]]
name = "server"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
rand = "0.8.2"
hex = "0.4.2"
sha2 = "0.9.2"
hkdf = "0.10.0"
